add aruco & auto2dpoint, delet some nav config in ucar_nav

--- a/ucar_ws/src/ucar_nav/launch/config/param/teb_local_planner_params.yaml
+++ b/ucar_ws/src/ucar_nav/launch/config/param/teb_local_planner_params.yaml
@@ -9,8 +9,8 @@ TebLocalPlannerROS:
  dt_hysteresis: 0.1
  max_samples: 500
  global_plan_overwrite_orientation: True
- allow_init_with_backwards_motion: True
- max_global_plan_lookahead_dist: 1.5
+ allow_init_with_backwards_motion: False
+ max_global_plan_lookahead_dist: 1.0
  global_plan_viapoint_sep: -1
  global_plan_prune_distance: 1
  exact_arc_length: False
@@ -39,8 +39,8 @@ TebLocalPlannerROS:
 
  # GoalTolerance
     
- xy_goal_tolerance: 0.2
- yaw_goal_tolerance: 0.1
+ xy_goal_tolerance: 0.1
+ yaw_goal_tolerance: 0.05
  free_goal_vel: False
  complete_global_plan: True
     
