--- a/ucar_ws/src/.vscode/settings.json
+++ b/ucar_ws/src/.vscode/settings.json
@@ -8,5 +8,6 @@
         "/mnt/devel/lib/python3/dist-packages",
         "/home/adam/wanderbot_ws/devel/lib/python2.7/dist-packages",
         "/opt/ros/melodic/lib/python2.7/dist-packages"
-    ]
+    ],
+    "python.pythonPath": "/usr/bin/python"
 }
