--- a/ucar_ws/src/ht_msg/CMakeLists.txt
+++ b/ucar_ws/src/ht_msg/CMakeLists.txt
@@ -8,11 +8,11 @@ project(ht_msg)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  message_generation
-  message_runtime
-  roscpp
+  geometry_msgs
   rospy
   std_msgs
+  turtlesim
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -49,11 +49,10 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+   FILES
+   Ht.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -70,10 +69,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -104,11 +103,19 @@ find_package(catkin REQUIRED COMPONENTS
 ## LIBRARIES: libraries you create in this project that dependent projects also need
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
-catkin_package(
+#catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ht_msg
-#  CATKIN_DEPENDS message_generation message_runtime roscpp rospy std_msgs
+#  CATKIN_DEPENDS geometry_msgs rospy std_msgs turtlesim
 #  DEPENDS system_lib
+#)
+
+catkin_package(
+CATKIN_DEPENDS 
+geometry_msgs 
+rospy std_msgs 
+turtlesim 
+message_runtime
 )
 
 ###########
