--- a/ucar_ws/src/ucar_nav/launch/config/param/teb_local_planner_params.yaml
+++ b/ucar_ws/src/ucar_nav/launch/config/param/teb_local_planner_params.yaml
@@ -10,7 +10,7 @@ TebLocalPlannerROS:
  max_samples: 500
  global_plan_overwrite_orientation: True
  allow_init_with_backwards_motion: False
- max_global_plan_lookahead_dist: 1.0
+ max_global_plan_lookahead_dist: 1.25
  global_plan_viapoint_sep: -1
  global_plan_prune_distance: 1
  exact_arc_length: False
@@ -19,10 +19,10 @@ TebLocalPlannerROS:
     
  # Robot
          
- max_vel_x: 0.5
- max_vel_x_backwards: 0.25
- max_vel_y: 0.5
- max_vel_theta: 0.9 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
+ max_vel_x: 1.0
+ max_vel_x_backwards: 0.5
+ max_vel_y: 1.0
+ max_vel_theta: 1.0 # the angular velocity is also bounded by min_turning_radius in case of a carlike robot (r = v / omega)
  acc_lim_x: 0.5
  acc_lim_theta: 0.7
 
@@ -46,7 +46,7 @@ TebLocalPlannerROS:
     
  # Obstacles
     
- min_obstacle_dist: 0.12 # This value must also include our robot's expansion, since footprint_model is set to "line".
+ min_obstacle_dist: 0.13 # This value must also include our robot's expansion, since footprint_model is set to "line".
  inflation_dist: 0.4 # 0.6
  include_costmap_obstacles: True
  costmap_obstacles_behind_robot_dist: 1.0
@@ -55,14 +55,15 @@ TebLocalPlannerROS:
  dynamic_obstacle_inflation_dist: 0.6
  include_dynamic_obstacles: True 
 
+ #costmap_converter_plugin: "costmap_converter::CostmapToLinesDBSMCCH"
  costmap_converter_plugin: ""
  costmap_converter_spin_thread: True
  costmap_converter_rate: 5
 
  # Optimization
     
- no_inner_iterations: 5
- no_outer_iterations: 4
+ no_inner_iterations: 4
+ no_outer_iterations: 3
  optimization_activate: True
  optimization_verbose: False
  penalty_epsilon: 0.1
