--- a/ucar_ws/src/ucar_controller/config/driver_params_mini.yaml
+++ b/ucar_ws/src/ucar_controller/config/driver_params_mini.yaml
@@ -7,10 +7,12 @@ odom_topic: /odom
 base_shape_a: 0.2169
 wheel_radius: 0.04657 
 vel_topic: /cmd_vel
-# provide_odom_tf: true
+provide_odom_tf: true
 cmd_timeout: 0.2
 serial_timeout: 50
 linear_speed_max:  3.0
 angular_speed_max: 3.14
 Mileage_file_name:  car_Mileage_info.txt
 debug_log:  false
+# imu_frame:  imu
+# laser_frame:  laser_frame
